# django-dynamic-models

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/dynamic_models_api/: manage.py
src/dynamic_models_api/core/: apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
src/dynamic_models_api/core/migrations/: 0001_initial.py  0002_alter_dynamicmodel_fields_alter_dynamicmodel_title.py  0003_rename_title_dynamicmodel_name.py
src/dynamic_models_api/dynamic_models_api/: asgi.py  settings.py  urls.py  wsgi.py
