[tool.poetry]
name = "django-dynamic-models"
version = "0.1.0"
description = ""
authors = ["ernestrakhmatulin"]
readme = "README.md"
packages = [{include = "django_dynamic_models"}]

[tool.poetry.dependencies]
python = "3.11"
Django = "^4.2.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
